@@ -1,15 +1,22 @@
 // Copyright 2002-2012, University of Colorado
 package edu.colorado.phet.linegraphing.linegame.view;
 
+import java.awt.Color;
+import java.awt.Font;
+
 import edu.colorado.phet.common.games.GameAudioPlayer;
 import edu.colorado.phet.common.phetcommon.util.function.VoidFunction0;
 import edu.colorado.phet.common.phetcommon.util.function.VoidFunction1;
+import edu.colorado.phet.common.phetcommon.view.util.PhetFont;
+import edu.colorado.phet.common.piccolophet.nodes.PhetPText;
+import edu.colorado.phet.linegraphing.common.LGResources;
 import edu.colorado.phet.linegraphing.common.LGResources.Strings;
 import edu.colorado.phet.linegraphing.common.model.Line;
 import edu.colorado.phet.linegraphing.linegame.LineGameConstants;
 import edu.colorado.phet.linegraphing.linegame.model.LineGameModel;
 import edu.colorado.phet.linegraphing.linegame.model.P3P_Challenge;
 import edu.colorado.phet.linegraphing.linegame.model.PlayState;
+import edu.umd.cs.piccolo.PNode;
 import edu.umd.cs.piccolo.util.PDimension;
 
 /**
@@ -19,6 +26,8 @@ import edu.umd.cs.piccolo.util.PDimension;
  * @author Chris Malley (cmalley@pixelzoom.com)
  */
 public class P3P_ChallengeNode extends ChallengeNode {
+
+    private static final PNode NOT_A_LINE = new PhetPText( Strings.NOT_A_LINE, new PhetFont( Font.BOLD, 24 ), Color.BLACK );
 
     private EquationBoxNode guessBoxNode;
 
@@ -33,7 +42,7 @@ public class P3P_ChallengeNode extends ChallengeNode {
                                      createEquationNode( challenge.lineForm, challenge.answer, LineGameConstants.STATIC_EQUATION_FONT, challenge.answer.color ) );
 
         // Guess
-        guessBoxNode = null;
+        guessBoxNode = new EquationBoxNode( Strings.YOUR_LINE, Color.BLACK, boxSize, NOT_A_LINE ); // dummy
 
         // Graph
         final P3P_GraphNode graphNode = new P3P_GraphNode( challenge );
@@ -42,6 +51,7 @@ public class P3P_ChallengeNode extends ChallengeNode {
         {
             subclassParent.addChild( graphNode );
             subclassParent.addChild( answerBoxNode );
+            subclassParent.addChild( guessBoxNode );
         }
 
         // layout
@@ -61,10 +71,8 @@ public class P3P_ChallengeNode extends ChallengeNode {
         final VoidFunction0 updateIcons = new VoidFunction0() {
             public void apply() {
                 answerBoxNode.setCorrectIconVisible( model.state.get() == PlayState.NEXT );
-                if ( guessBoxNode != null ) {
-                    guessBoxNode.setCorrectIconVisible( model.state.get() == PlayState.NEXT && challenge.isCorrect() );
-                    guessBoxNode.setIncorrectIconVisible( model.state.get() == PlayState.NEXT && !challenge.isCorrect() );
-                }
+                guessBoxNode.setCorrectIconVisible( model.state.get() == PlayState.NEXT && challenge.isCorrect() );
+                guessBoxNode.setIncorrectIconVisible( model.state.get() == PlayState.NEXT && !challenge.isCorrect() );
             }
         };
 
@@ -72,18 +80,14 @@ public class P3P_ChallengeNode extends ChallengeNode {
         challenge.guess.addObserver( new VoidFunction1<Line>() {
             public void apply( Line line ) {
 
-                // update the equation (line may be null if points don't make a line)
-                if ( guessBoxNode != null ) {
-                    subclassParent.removeChild( guessBoxNode );
-                    guessBoxNode = null;
-                }
-                if ( line != null ) {
-                    guessBoxNode = new EquationBoxNode( Strings.YOUR_LINE, line.color, boxSize,
-                                                        createEquationNode( challenge.lineForm, line, LineGameConstants.STATIC_EQUATION_FONT, line.color ) );
-                    guessBoxNode.setOffset( answerBoxNode.getXOffset(), answerBoxNode.getFullBoundsReference().getMaxY() + 20 );
-                    subclassParent.addChild( guessBoxNode );
-                    guessBoxNode.setVisible( model.state.get() == PlayState.NEXT );
-                }
+                // update the equation (line is null if points don't make a line)
+                subclassParent.removeChild( guessBoxNode );
+                PNode equationNode = ( line == null ) ? NOT_A_LINE : createEquationNode( challenge.lineForm, line, LineGameConstants.STATIC_EQUATION_FONT, line.color );
+                Color color = ( line == null ) ? LineGameConstants.GUESS_COLOR : line.color;
+                guessBoxNode = new EquationBoxNode( Strings.YOUR_LINE, color, boxSize, equationNode );
+                guessBoxNode.setOffset( answerBoxNode.getXOffset(), answerBoxNode.getFullBoundsReference().getMaxY() + 20 );
+                subclassParent.addChild( guessBoxNode );
+                guessBoxNode.setVisible( model.state.get() == PlayState.NEXT );
 
                 // visibility of correct/incorrect icons
                 updateIcons.apply();
@@ -99,9 +103,7 @@ public class P3P_ChallengeNode extends ChallengeNode {
                 graphNode.setChildrenPickable( graphNode.getPickable() );
 
                 // Show all equations and lines at the end of the challenge.
-                if ( guessBoxNode != null ) {
-                    guessBoxNode.setVisible( state == PlayState.NEXT );
-                }
+                guessBoxNode.setVisible( state == PlayState.NEXT );
                 graphNode.setAnswerVisible( state == PlayState.NEXT );
 
                 // visibility of correct/incorrect icons
